css: fix missing color dec in social media a

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -239,7 +239,7 @@ footer {
 
 .social-media a {
     text-decoration: none;
-    var(--hue)
+    color: var(--hue);
     color:RGB(var(--hue-footer-icons));
 }
 
